--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/14/2020 03:24:00 PM</p>
+    <p class="lastupdate">09/14/2020 03:29:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">88.4&#176;F</td>
+        <td class="data">87.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">88.4&#176;F</td>
+        <td class="data">87.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">88.4&#176;F</td>
+        <td class="data">87.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">40.9&#176;F</td>
+        <td class="data">39.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">19%</td>
+        <td class="data">18%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.901 inHg (-0.051)</td>
+        <td class="data">29.898 inHg (-0.049)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">11 mph SW (225&#176;)</td>
+        <td class="data">12 mph SSW (202&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">77.6&#176;F</td>
+        <td class="data">77.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -305,8 +305,8 @@
         <td class="data new_row hilo_day">
           <span title="10:09:01 AM">
             29.985</span><br/>
-          <span title="03:18:02 PM">
-            29.900</span>
+          <span title="03:24:02 PM">
+            29.898</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="10:09:01 AM (Monday)">
@@ -448,7 +448,7 @@
         </td>
         <td class="data new_row hilo_month">
           0<br/>
-          228
+          227
         </td>
         <td class="data new_row hilo_year">
           2<br/>
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="03:23:02 PM">
-            77.6</span><br/>
+          <span title="03:28:02 PM">
+            77.7</span><br/>
           <span title="07:44:01 AM">
             73.0</span>
         </td>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">94%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">13 days, 0 hours, 37 minutes</td>
+      <td class="data">13 days, 0 hours, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">13 days, 0 hours, 37 minutes</td>
+      <td class="data">13 days, 0 hours, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
