--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/14/2020 03:34:00 PM</p>
+    <p class="lastupdate">09/14/2020 03:39:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">88.1&#176;F</td>
+        <td class="data">87.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">88.1&#176;F</td>
+        <td class="data">87.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">88.1&#176;F</td>
+        <td class="data">87.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">39.2&#176;F</td>
+        <td class="data">37.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">18%</td>
+        <td class="data">17%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.900 inHg (-0.045)</td>
+        <td class="data">29.901 inHg (-0.041)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">8 mph SSW (202&#176;)</td>
+        <td class="data">10 mph S (180&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">77.7&#176;F</td>
+        <td class="data">77.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -423,7 +423,7 @@
         <td class="data new_row hilo_day">
           4</td>
         <td class="data new_row hilo_week">
-          3</td>
+          4</td>
         <td class="data new_row hilo_month">
           3</td>
         <td class="data new_row hilo_year">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           1<br/>
-          205
+          204
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -448,7 +448,7 @@
         </td>
         <td class="data new_row hilo_month">
           0<br/>
-          227
+          226
         </td>
         <td class="data new_row hilo_year">
           2<br/>
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="03:28:02 PM">
-            77.7</span><br/>
+          <span title="03:38:02 PM">
+            77.9</span><br/>
           <span title="07:44:01 AM">
             73.0</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">13 days, 0 hours, 47 minutes</td>
+      <td class="data">13 days, 0 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">13 days, 0 hours, 47 minutes</td>
+      <td class="data">13 days, 0 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
