--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/14/2020 04:49:00 PM</p>
+    <p class="lastupdate">09/14/2020 04:54:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">84.3&#176;F</td>
+        <td class="data">84.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">84.3&#176;F</td>
+        <td class="data">84.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">84.3&#176;F</td>
+        <td class="data">84.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">41.3&#176;F</td>
+        <td class="data">40.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">22%</td>
+        <td class="data">21%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.912 inHg (-0.002)</td>
+        <td class="data">29.915 inHg (0.001)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">9 mph S (180&#176;)</td>
+        <td class="data">10 mph SSW (202&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="04:42:02 PM">
-            80.5</span><br/>
+          <span title="04:52:02 PM">
+            80.6</span><br/>
           <span title="07:44:01 AM">
             73.0</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">13 days, 2 hours, 2 minutes</td>
+      <td class="data">13 days, 2 hours, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">13 days, 2 hours, 2 minutes</td>
+      <td class="data">13 days, 2 hours, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
