--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/14/2020 05:09:00 PM</p>
+    <p class="lastupdate">09/14/2020 05:14:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">83.8&#176;F</td>
+        <td class="data">83.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">83.8&#176;F</td>
+        <td class="data">83.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">83.8&#176;F</td>
+        <td class="data">83.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">42.0&#176;F</td>
+        <td class="data">42.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">23%</td>
+        <td class="data">24%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.915 inHg (0.002)</td>
+        <td class="data">29.913 inHg (0.005)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">10 mph S (180&#176;)</td>
+        <td class="data">9 mph SSW (202&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">80.4&#176;F</td>
+        <td class="data">80.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">13 days, 2 hours, 22 minutes</td>
+      <td class="data">13 days, 2 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">13 days, 2 hours, 22 minutes</td>
+      <td class="data">13 days, 2 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
